# AI_IMAGE_CAPTION_GENERATOR

./: .dockerignore  .env.example  .gitignore  API_DOCS.md  ARCHITECTURE.md  CHANGELOG.md  CONGRATULATIONS.md  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  MANIFEST.in  PROJECT_SUMMARY.md  PUBLISHING_GUIDE.md  PUBLISH_QUICK.md  QUICK_REFERENCE.md  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  setup_script.py
chrome-extension/: background.js  content.js  manifest.json  popup.html  popup.js
chrome-extension/icons/: README.md
examples/sample_images/: README.md
src/: __init__.py  __version__.py  captioner.py  translator.py
src/utils/: image_processor.py
static/css/: style.css
static/js/: main.js
templates/: index.html
tests/: test_api.py  test_captioner.py
